--- a/external.html
+++ b/external.html
@@ -1,7 +1,8 @@
 <!-- ExternalStyling.html -->
 <html>
 <head>
-    <link rel="stylesheet" href="..\CascadingStyleSheets\ExternalStyling.css">
+     <link rel="stylesheet" href="../CascadingStyleSheets\ExternalStyling.css">
+
 </head>
 <body>
     <div>
@@ -11,7 +12,7 @@
            The extension name of the stylesheet file is .css <br>
         </p>
         <p>This is a paragraph. I am inside Div.</p>
-    </div>
+    </div>  
     <div>
         <h1>What is div?</h1>
         <p>Div can be used for creating a section.</p>
