--- a/fileinsamefolder.html
+++ b/fileinsamefolder.html
@@ -10,10 +10,10 @@
             ChiPi Technologies Private Limited is a leading provider of software solutions and services. We specialize in developing custom software applications for businesses of all sizes. Our team of experienced developers and designers work closely with our clients to deliver high-quality solutions that meet their unique needs.
         </p>
         <ul>
-            <li> <a href="./anchor.html"> Anchor Element </a></li>
-            <li> <a href="./homework.html"> Text Formatting Elements </a></li>
-            <li> <a href="./firstwebpage.html"> Text Formatting Elements - Details</a></li>
-            <li> <a href="./basicstructure.html"> Ordered and unordered list </a></li>
+            <li> <a href="./index.html"> Anchor Element </a></li>
+            <li> <a href="./inline.html"> Text Formatting Elements </a></li>
+            <li> <a href="./firstsite.html"> Text Formatting Elements - Details</a></li>
+            <li> <a href="./internal.html"> Ordered and unordered list </a></li>
             
         </ul>
         <h1>ChiPi Technologies Private Limited</h1>
