--- a/personalportfolio/homepage.html
+++ b/personalportfolio/homepage.html
@@ -7,7 +7,7 @@
 <tr height="100%">
     <td width="75%" align="center"bgcolor="#f0ffff">
         <p><b> KHUSHI KUMARI </b></p>
-        <img src="\personalportfolio\WhatsApp Image 2025-06-02 at 11.30.05_59f18ca2.jpg" alt="khushi" width="200">
+        <img src="\images\WhatsApp Image 2025-06-02 at 11.30.05_59f18ca2.jpg" alt="khushi" width="200">
         <p>Hi! I'm a web developer passionate about building responsive, user-friendly websites. 
 I specialize in writing clean HTML, CSS, and JavaScript to turn ideas into functional and engaging digital experiences. 
 Welcome to my portfolio!</p></td>
